[package]
name = "xmodmap-pke"
authors = ["Rustem B. <rustemb@systemli.org>"]
description = "xmodmap -pke in mostly pure rust"
homepage = "https://github.com/RustemB/xmodmap-pke"
repository = "https://github.com/RustemB/xmodmap-pke" 
readme = "Readme.md"
documentation = "https://docs.rs/xmodmap-pke"
license = "LGPL-3.0-or-later"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = "2.18.2"
libc = "0.2.94"
